# CI4721-Criollito

./: .gitignore  CMakeLists.txt  FaltantesEnParser.txt  README.md  development.md
src/: AST.cpp  AST.h  ast.cpp  ast.h  error_manager.cpp  error_manager.h  lexer.l  main.cpp  parser.y  sym_table.cpp  sym_table.h  tabulate.h  type_checker.cpp  type_checker.h
test_files/: tipos.criollito
test_files/failure/: errores_parser.criollito  fibMalo_nombreVariable.criollito  holaMundo_Malo_NoBracketClose.criollito  holaUsuarioMalo.criollito  sumMalo_errorWhile.criollito  sumMalo_redefinicion.criollito
test_files/success/: brainfck.criollito  fibonacci.criollito  holaMundo.criollito  holaUsuario.criollito  kruskal.criollito  multMatrices.criollito  sumatoria.criollito  test_1.criollito  var_declaration
